Equal button style

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="operations row">
 				<div class="col col-xs-3">
-					<button class="operation-btn btn btn-large">/</button>
+					<button class="operation-btn btn btn-large">&divide;</button>
 				</div>
 				<div class="col col-xs-3">
 					<button class="operation-btn btn btn-large">x</button>
@@ -54,7 +54,7 @@
 			<div class="row">
 			<div class="col col-xs-4">.</div>
 			<div class="col col-xs-4">0</div>
-			<div class="col col-xs-4">=</div>
+			<div class="col col-xs-4"><button class="equalbtn btn">=</button></div>
 			</div>
 		</div>
 	</div>
