--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	<div id="calculator" class="col col-sm-6  col-xs-12 col-sm-offset-3">
 		<div class="result-pane">
 			<div class="expression">
-				2 + 3 + 4
+				Your Expression Comes Here
 			</div>
-			<h1 class="result">234</h1>
+			<h1 class="result">Ans</h1>
 		</div>
 		<div class="operations row">
 				<div class="col col-xs-3">
@@ -37,23 +37,27 @@
 
 		<div class="numbers row">
 			<div class="row">
-			<div class="col col-xs-4">7</div>
-			<div class="col col-xs-4">8</div>
-			<div class="col col-xs-4">9</div>
+			<div class="clearbtn col col-xs-4">AC</div>
+			<div class="clearbtn col col-xs-4">CE</div>
 			</div>
 			<div class="row">
-			<div class="col col-xs-4">4</div>
-			<div class="col col-xs-4">5</div>
-			<div class="col col-xs-4">6</div>
+			<div class="numbtn col col-xs-4">7</div>
+			<div class="numbtn col col-xs-4">8</div>
+			<div class="numbtn col col-xs-4">9</div>
 			</div>
 			<div class="row">
-			<div class="col col-xs-4">1</div>
-			<div class="col col-xs-4">2</div>
-			<div class="col col-xs-4">3</div>
+			<div class="numbtn col col-xs-4">4</div>
+			<div class="numbtn col col-xs-4">5</div>
+			<div class="numbtn col col-xs-4">6</div>
 			</div>
 			<div class="row">
-			<div class="col col-xs-4">.</div>
-			<div class="col col-xs-4">0</div>
+			<div class="numbtn col col-xs-4">1</div>
+			<div class="numbtn col col-xs-4">2</div>
+			<div class="numbtn col col-xs-4">3</div>
+			</div>
+			<div class="row">
+			<div class="numbtn col col-xs-4">.</div>
+			<div class="numbtn col col-xs-4">0</div>
 			<div class="col col-xs-4"><button class="equalbtn btn">=</button></div>
 			</div>
 		</div>
@@ -61,6 +65,6 @@
 
 	<!-- Scripts -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="/js/app.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
